WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172047
Only ever initialize LibWebRTCProvider's staticFactoryAndThreads() factories once.
https://bugs.webkit.org/show_bug.cgi?id=172047
Summary
Only ever initialize LibWebRTCProvider's staticFactoryAndThreads() factories ...
Jer Noble
Reported
2017-05-12 14:08:12 PDT
Only ever initialize LibWebRTCProvider's staticFactoryAndThreads() factories once.
Attachments
Patch
(2.40 KB, patch)
2017-05-15 15:00 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-05-15 15:00:16 PDT
Created
attachment 310172
[details]
Patch
Build Bot
Comment 2
2017-05-15 15:02:55 PDT
Attachment 310172
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:66: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:67: More than one command on the same line [whitespace/newline] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2017-05-15 15:34:19 PDT
Comment on
attachment 310172
[details]
Patch Clearing flags on attachment: 310172 Committed
r216884
: <
http://trac.webkit.org/changeset/216884
>
WebKit Commit Bot
Comment 4
2017-05-15 15:34:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug