Only ever initialize LibWebRTCProvider's staticFactoryAndThreads() factories once. https://bugs.webkit.org/show_bug.cgi?id=172047

Reviewed by Youenn Fablet.

Wrap the initilization of the factories contained in staticFactoryAndThreads() in a call_once to ensure
new factories aren't created every time it's called.

* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::staticFactoryAndThreads):


Canonical link: https://commits.webkit.org/189061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216884 268f45cc-cd09-0410-ab3c-d52691b4dbfc